--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -30,12 +30,15 @@ features:
     - icon: flash_on
       title: Work of <br>Digital Minister
       content: Digital Minister is in charge of open government, social enterprises, and youth council.
+      link: https://po.pdis.nat.gov.tw/en/
     - icon: group
       title: Digital <br>Administration
       content: We work with ministries and departments to provide digital services with better efficiency through automated process, structured data and meaningful visualization.
+      link: https://ci.taiwan.gov.tw/index_ne.aspx
     - icon: settings
       title: Participatory Governance
       content: We offer guide to private sectors, establish dialogue channels between community, and facilitate peer network for local, national and international partners.
+      link: https://presidential-hackathon.taiwan.gov.tw/en/
 
 
 #---------------------------------------------------------------------------------------------------
