--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -127,10 +127,14 @@ ref:
 info:
   title: Links
   list:
+  - name: Social Innovation Taiwan
+    url: 'https://si.taiwan.gov.tw/'
+  - name: Youth Advisory Council
+    url: 'https://advisory.yda.gov.tw/'
+  - name: Join.gov.tw
+    url: 'http://join.gov.tw/'
   - name: vTaiwan.tw
     url: 'https://vtaiwan.tw/'
-  - name: join.gov.tw
-    url: 'http://join.gov.tw/'
   - name: Facebook
     url: 'https://www.facebook.com/shu.w.zhengwei'
   - name: Twitter
