--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ permalink: /:categories/:title/
 sass:
   style: compressed
 future: true
-exclude: ["package.json", "articles_translate.js", "README.md", "Gemfile", "Gemfile.lock", "package-lock.json", "node_modules", "GCP.json"]
+exclude: ["package.json", "articles_translate.js", "README.md", "Gemfile", "Gemfile.lock", "package-lock.json", "node_modules", "GCP.json", "yarn.lock"]
 
 twitter_username: TaiwanPDIS
 github_username: pdis
