--- a/_config.yml
+++ b/_config.yml
@@ -40,4 +40,4 @@ categories:
 # ---------- get json api ----------
 jekyll_get_json:
   - data: tracks_json
-    json: 'https://talk.pdis.nat.gov.tw/uploads/tracks.json'
+    json: 'https://talk.pdis.nat.gov.tw/assets/tracks.json'
