--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -30,7 +30,7 @@ features:
   list: 
     - icon: flash_on
       title: Work of <br>Digital Minister
-      content: Digital Minister is in charge of open government, social enterprises, and youth council.
+      content: Digital Minister is in charge of open government, social innovation, and youth engagement.
       link: https://po.pdis.nat.gov.tw/en/
     - icon: group
       title: Digital <br>Administration
