--- a/_i18n/zh-TW.yml
+++ b/_i18n/zh-TW.yml
@@ -30,7 +30,7 @@ features:
   list: 
     - icon: flash_on
       title: 數位政委督導業務
-      content: 協辦開放政府、社會企業、青年事務。
+      content: 開放政府、社會創新、青年參與。
       link: https://po.pdis.nat.gov.tw/zh-TW/
     - icon: group
       title: 促進行政數位化
