update styles in contact

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,165 +2,165 @@
     content: 數位政務委員，業務為社會企業、青年事務、開放政府。
     wiselike: 'https://wiselike.tw/#/user/audreyt'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/audreyt/800/574_1.png'
-    status: working
+    status: current
     twitter: audreyt
     name: 唐鳳
 張皓婷:
     wiselike: 'https://wiselike.tw/#/user/haoting'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/haoting/240/10766_2.png'
-    status: working
+    status: current
     name: 張皓婷
 蕭郁溏:
     wiselike: 'https://wiselike.tw/#/user/AvrossHsiao'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/avrosshsiao/800/577_1.png'
-    status: working
+    status: former
     name: 蕭郁溏
 魏守斌:
     wiselike: 'https://wiselike.tw/#/user/Bobby'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/bobby/800/4074_1.png'
-    status: working
+    status: current
     name: 魏守斌
 李雪津:
     wiselike: 'https://wiselike.tw/#/user/cherjean'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/cherjean/800/592_1.png'
-    status: leave
+    status: former
     name: 李雪津
 李姿瑩:
     wiselike: 'https://wiselike.tw/#/user/chihyingli'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chihyingli/800/609_1.png'
-    status: leave
+    status: former
     name: 李姿瑩
 賴致翔:
     content: 浪漫派公務員但是做著很實際的工作
     wiselike: 'https://wiselike.tw/#/user/chlai'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chlai/800/576_1.png'
-    status: leave
+    status: former
     name: 賴致翔
 陳怡君:
     wiselike: 'https://wiselike.tw/#/user/chun'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chun/240/729_1.png'
-    status: working
+    status: current
     name: 陳怡君
 陳彥佑:
     wiselike: 'https://wiselike.tw/#/user/CYY'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/cyy/800/578_1.png'
-    status: leave
+    status: former
     name: 陳彥佑
 貢丸:
     wiselike: 'https://wiselike.tw/#/user/dychien'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/dychien/800/555_1.png'
-    status: working
+    status: current
     name: 貢丸
 張芳睿:
     wiselike: 'https://wiselike.tw/#/user/fang'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/fang/800/579_1.png'
-    status: working
+    status: current
     name: 張芳睿
 周紹文:
     content: 行政院 公共數位創新小組 替代役
     wiselike: 'https://wiselike.tw/#/user/john5601'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/john5601/800/580_1.png'
-    status: leave
+    status: former
     name: 周紹文
 簡就可:
     content: 影像工作者／網頁前端設計師。
     wiselike: 'https://wiselike.tw/#/user/jokeum'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/jokeum/800/581_1.png'
-    status: working
+    status: current
     name: 簡就可
 Mark:
     content: 好熱！好熱！
     wiselike: 'https://wiselike.tw/#/user/markdai'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/markdai/800/582_1.png'
-    status: working
+    status: former
     name: Mark
 陳牧:
     wiselike: 'https://wiselike.tw/#/user/MuChen'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/muchen/800/590_1.png'
-    status: leave
+    status: former
     name: 陳牧
 張庭瑜:
     content: 感恩PDIS，讚嘆PDIS
     wiselike: 'https://wiselike.tw/#/user/Naxus'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/naxus/800/583_1.png'
-    status: working
+    status: current
     name: 張庭瑜
 葉寧:
     wiselike: 'https://wiselike.tw/#/user/ningyeh'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/ningyeh/800/676_1.png'
-    status: working
+    status: current
     name: 葉寧
 蔡仲明:
     content: 資策會派來的台灣社會數位化打手 ._.
     wiselike: 'https://wiselike.tw/#/user/romulus'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/romulus/800/585_1.png'
-    status: working
+    status: current
     name: 蔡仲明
 林書漾:
     content: 在公共數位創新空間小組進行一個設計的動作
     wiselike: 'https://wiselike.tw/#/user/shuyanglin'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/shuyanglin/800/605_1.png'
-    status: working
+    status: current
     name: 林書漾
 林正東:
     content: 行政院 公共數位創新小組 (PDIS) / wiselike 貢獻者
     wiselike: 'https://wiselike.tw/#/user/smith02620'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/smith02620/800/587_1.png'
-    status: leave
+    status: former
     name: 林正東
 彭筱婷:
     wiselike: 'https://wiselike.tw/#/user/stpeng'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/stpeng/800/659_1.png'
-    status: working
+    status: current
     name: 彭筱婷
 "☕️展銘🐘":
     content: 我不是長頸鹿  我不是長頸鹿   我不是長頸鹿
     wiselike: 'https://wiselike.tw/#/user/targee'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/targee/800/588_1.png'
-    status: working
+    status: current
     name: "☕️展銘🐘"
 薛雅婷:
     wiselike: 'https://wiselike.tw/#/user/Wendy'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/wendy/800/638_1.png'
-    status: working
+    status: current
     name: 薛雅婷
 黃子維:
     wiselike: 'https://wiselike.tw/#/user/zach'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/zach/800/589_1.png'
-    status: working
+    status: current
     name: 黃子維
 雨蒼:
     content: 自由軟體工作者、公民記者
     wiselike: 'https://wiselike.tw/#/user/billy3321'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/billy3321/240/727_1.png'
-    status: working
+    status: former
     name: 雨蒼
 李忠和:
     content: 行政院 公共數位創新小組 (PDIS) 服役中
     wiselike: 'https://wiselike.tw/#/user/peterlee'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/peterlee/240/727_1.png'
-    status: leave
+    status: former
     name: 李忠和
 許舜博:
     wiselike: 'https://wiselike.tw/#/user/shbhsu'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/shbhsu/300/686_1.png'
-    status: leave
+    status: former
     name: 許舜博
 林宗禧:
     wiselike: ''
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/linjose/800/109_1.png'
-    status: leave
+    status: former
     name: 林宗禧
 李建平:
     wiselike: ''
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/rodlee/800/113_1.png'
-    status: leave
+    status: former
     name: 李建平
 莊秉倫:
     content: 半路出家到資工系研究生，立志成為從機房到 UI/UX 都會的 Full Stack 工程師
     wiselike: ''
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/bingluen/800/746_1.png'
-    status: intern
+    status: current
     name: 莊秉倫
 chiachichang:
     wiselike: ''
@@ -240,25 +240,25 @@ yunhuichen:
 詹壹雯:
     wiselike: 'https://wiselike.tw/#/user/yiwenchan'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/315yiwenchan/240/10653_1.png'
-    status: working
+    status: current
     name: 詹壹雯
 蔡琬梅:
     wiselike: ''
     avatar: 'http://graph.facebook.com/699755368/picture?type=large'
-    status: leave
+    status: former
     name: 蔡琬梅
 王少芸:
     wiselike: 'https://wiselike.tw/#/user/smalying'
     avatar: 'https://i.imgur.com/6otLPNO.jpg'
-    status: working
+    status: current
     name: 王少芸
 蔡玉琪:
     wiselike: 'https://wiselike.tw/#/user/yuchitsai'
     avatar: ''
-    status: working
+    status: current
     name: 蔡玉琪
 陳裕興:
     wiselike: ''
     avatar: ''
-    status: working
+    status: current
     name: 陳裕興
