add author member

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -262,3 +262,8 @@ yunhuichen:
     avatar: ''
     status: current
     name: 陳裕興
+許恩恩:
+    wiselike: ''
+    avatar: ''
+    status: working
+    name: 許恩恩
