update authors (skip-tr)

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -180,7 +180,7 @@ Mark:
     name: 王少芸
 蔡玉琪:
     wiselike: 'https://wiselike.tw/#/user/yuchitsai'
-    avatar: 'https://graph.facebook.com/100003951947148/picture?type=large'
+    avatar: 'https://i.imgur.com/1WCNW9J.jpg'
     status: current
     name: 蔡玉琪
 陳裕興:
