--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ exclude:
   - "node_modules/"
   - "GCP.json"
   - "yarn.lock"
+  - "Makefile"
 
 google_site_verification: uxXHtWt7-XyZrPJb9BznXlKOOKklt1D_TAIv1UW8VhM
 twitter:
