* click here to learn more

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -8,7 +8,7 @@ site:
   track: Tracks
   title: Public Digital Innovation Space
   description: We incubate and facilitate public digital innovation and service.
-  more: more&nbsp;
+  more: Click here to learn more
   search_result: Search Result
   blog_tags: Blog Tags
   is_fullwidth: false
