--- a/_i18n/zh-TW.yml
+++ b/_i18n/zh-TW.yml
@@ -8,7 +8,7 @@ site:
   track: 工作記錄
   title: 行⁠政⁠院公⁠共⁠數⁠位創⁠新⁠空⁠間
   description: 我們協助政府部會提升數位服務品質，以創新方式改善和增進公務體系的工作流程、方針規則及使用工具。
-  more: 更多
+  more: 請按此深入瞭解
   search_result: 搜尋結果
   blog_tags: 標籤分類
   is_fullwidth: true
