--- a/_i18n/zh-TW.yml
+++ b/_i18n/zh-TW.yml
@@ -28,17 +28,17 @@ features:
   subtitle: 「PDIS協助政府部會提升數位服務品質，以服務設計思維優化公務體系的流程和工具，並導引公部門採納社會創新，與民間社群協作，進而促成連結臺灣和世界的生態系。」
   list: 
     - icon: people_outline
-      title: 數位政委督導業務
+      title: 開放政府
       content: 開放政府、社會創新、青年參與。
       link: https://po.pdis.nat.gov.tw/zh-TW/
     - icon: cloud_queue
-      title: 促進行政數位化
+      title: 社會創新
       content: 協助各部會單位收集民眾意見後規劃設計，改善軟體、平台、系統和網站，達成「自動化」、「結構化」、「視覺化」的目標。
-      link: https://ci.taiwan.gov.tw/
+      link: https://si.taiwan.gov.tw/
     - icon: all_inclusive
-      title: 參與式治理
+      title: 青年參與
       content: 導引民間專業進入公部門，建立原有社群與政府的對話溝通管道，促成連結在地、台灣和世界的網絡。
-      link: https://presidential-hackathon.taiwan.gov.tw/
+      link: https://advisory.yda.gov.tw/
 
 #---------------------------------------------------------------------------------------------------
 
