--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -30,13 +30,13 @@ features:
     - icon: people_outline
       title: Open Government
       content: Digital Minister is in charge of open government, social innovation, and youth engagement.
-      link: https://po.pdis.nat.gov.tw/en/
+      link: https://po.pdis.nat.gov.tw/en/opengov/
     - icon: cloud_queue
       title: Social Innovation
       content: We work with ministries and departments to provide digital services with better efficiency through automated process, structured data and meaningful visualization.
       link: https://si.taiwan.gov.tw/?lang=en
     - icon: all_inclusive
-      title: Participatory Governance
+      title: Youth Engagement
       content: We offer guide to private sectors, establish dialogue channels between community, and facilitate peer network for local, national and international partners.
       link: https://advisory.yda.gov.tw/
 
