--- a/_i18n/zh-TW.yml
+++ b/_i18n/zh-TW.yml
@@ -139,3 +139,40 @@ info:
 
 about:
   title: 關於 PDIS
+
+opengov:
+  what:
+    title: 什麼是開放政府？
+    content0: 開放政府是由叫做OGP（Open Government Partnership，開放政府夥伴關係）的國際組織所提出來的：
+    content1: 「......秉持開放之價值與公民接觸，以改善服務、管理公共資源、推動創新及建構更安全之社區。懷抱透明及開放政府之原則，於自己國家與日益緊密連結的世界，實現繁榮、福祉及符合人類尊嚴之社會。......」
+    content2: 開放政府的四大願景，也就是我們期待的未來，是一個透明的政府、參與的政府、課責的政府和涵容的政府。
+  why:
+    title: 為什麼需要開放政府？
+    content: 公部門與大眾之間的信任基礎越高，我們便有更高的機會擁有完善的公共政策。反之，如果缺乏互信，議題討論就可能失焦，也可能造成公共政策搖擺不定、付出巨大的社會成本。所以，<a class="text-highlight">公部門與大眾間彼此互信，是開放政府的終極目標。</a>
+
+  how:
+    title: 如何推動開放政府？
+    content: <a class="text-highlight">推動開放政府，一定要從改變公務文化開始。</a>如果可以讓實際推動政策的公務員當火車頭，主動採用更開放的方法和心態產出政策，長期下來，政策便可儘早確定方向，也能把事情做得更好。也就是說，改變公務文化就像是下水道工程，雖然看不見，但是長期下來一定能感覺到顯著的變化。
+
+  who:
+    title: 誰來推動開放政府？
+    content: 開放政府是所有人的事，因此，我們需要願意參與政策推動過程的人民、能分享實務經驗的公務員、以及能夠承擔責任的政務官；所以，由各部會指派的「開放政府聯絡人」也就是 PO（Participation Officer），就是改變公務文化，深耕開放政府的「種子」。
+
+  points:
+    title: 開放政府的四個要素
+    content: 什麼是開放政府呢？簡單來說，在制定公共政策的過程中，漸進地把透明、參與、課責及涵容四個要素放進進去，就是開放政府落實的方式。但具體來說，應該要怎麼做？
+    list:
+      - title: 透明 (Transparency）
+        img: Transparency.png
+        content: 政治是眾人之事，政策過程應該讓眾人能清楚地知道「發生了什麼事」。公部門的朋友可能擔心，若是讓外界直接看到這些未定案的溝通過程，會不會發生問題？事實上，越早開始提供資料，大眾越容易瞭解公部門所做的準備，公部門就可省下重複溝通的心力和時間，進一步減少公部門的溝通負擔。
+      - title: 參與 (Participation）
+        img: Participation.png
+        content: 政策形成的過程中，讓大眾有機會針對有興趣的議題參與討論、表達意見，甚至進一步影響政策的內容。這樣一來，雖然公部門需要花更多時間凝聚共識，但政策成形之後，被大眾反對、甚至翻盤的風險也較小。
+      - title: 課責（Accountability）
+        img: Accountability.png
+        content: 大眾對政策形成過程有疑慮時，可以回頭檢視這個意見是由誰提出？採納或不採納的原因為何？透過「接受問責、給出交代」的機制，建立「當責」的文化，讓每個人能主動對自己的意見負責。
+      - title: 涵容（Inclusion）
+        img: Inclusion.png
+        content: 公共議題涉及的面向很廣，如果在議題的討論過程中，公部門能讓受到政策直接影響的多方利害關係人充分表達意見，並彼此聆聽對話，就能收集盡可能多元的意見，減少政策發生錯誤的可能。
+    summary: 以上這四個要素會環環相扣，才能達成開放政府的願景。如果只有透明，卻沒有課責；或是有了參與，卻沒有涵容，開放政府就會發生嚴重的問題，徒有開放的形式，卻沒有開放的精神，成為「開放式洗白」（Open Washing）。
+  link-to-po: 開放政府聯絡人
