--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -25,7 +25,7 @@ contact-us:
 
 features:
   title: What do we do ？
-  subtitle: To connect Taiwan and the world, PDIS incubates and facilitates public digital innovation and service, optimises the processes and tools of the public service system with design thinking, guides the public sector to adopt social innovation and collaborates with private communities.
+  subtitle: To connect Taiwan and the world, PDIS incubates and facilitates public digital innovation and service, optimises the processes and tools of the public service with design thinking, guides the public sector to adopt social innovations and collaborate with communities of practice.
   list: 
     - icon: people_outline
       title: Open Government
