--- a/.travis.yml
+++ b/.travis.yml
@@ -2,26 +2,16 @@ jobs:
   include:
 ##### translate stage - Check if there have articles need to translate #####
     - stage: translate
-      if: commit_message !~ /(update tracks.json)|(skip-tr)/
       language: node_js
       node_js: 8.9.1
       script:
-        - git remote set-url origin https://$GITHUB_TOKEN@github.com/pdis/web-jekyll
-        - git checkout master
-        - npm install
-        - node articles_translate.js
-        - git config --global user.email "auto_translate@pdis.tw"
-        - git config --global user.name "auto_translate"
-        - git add .
-        - git commit -m 'auto translate (skip-tr)' --allow-empty
-        - git push origin master
+        - ./build/translate.sh
       before_install:
       - openssl aes-256-cbc -K $encrypted_2fb15357d122_key -iv $encrypted_2fb15357d122_iv
         -in GCP.json.enc -out GCP.json -d
 
 ##### deploy stage - Deploy to gh-pages #####
     - stage: deploy
-      if: commit_message ~= /(update tracks.json)|(skip-tr)/
       rvm: 2.4.1
       script:
         - bundle exec jekyll build
