--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ jobs:
       - openssl aes-256-cbc -K $encrypted_2fb15357d122_key -iv $encrypted_2fb15357d122_iv
         -in GCP.json.enc -out GCP.json -d
       - echo -e "machine github.com\n  login $GITHUB_TOKEN" > ~/.netrc
-      - git lfs pull
+#      - git lfs pull
 
 ##### deploy stage - Deploy to gh-pages #####
     - stage: deploy
