--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,6 +1,6 @@
 ########## PDIS ##########
 唐鳳:
-    content: 數位政務委員，業務為社會企業、青年事務、開放政府。
+    content: 數位政務委員，業務為社會創新、青年參與、開放政府。
     wiselike: 'https://wiselike.tw/#/user/audreyt'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/audreyt/800/574_1.png'
     status: current
