--- a/_i18n/zh-TW.yml
+++ b/_i18n/zh-TW.yml
@@ -40,7 +40,7 @@ features:
       link: https://si.taiwan.gov.tw/
       image: /images/social-innovation.png
     - icon: all_inclusive
-      title: 青年事務
+      title: 青年參與
       # content: 導引民間專業進入公部門，建立原有社群與政府的對話溝通管道，促成連結在地、台灣和世界的網絡。
       content: 青年事務，青年作主
       link: https://advisory.yda.gov.tw/
