--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -36,7 +36,7 @@
     content: 浪漫派公務員但是做著很實際的工作
     wiselike: 'https://wiselike.tw/#/user/chlai'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chlai/800/576_1.png'
-    status: former
+    status: current
     name: 賴致翔
 陳怡君:
     wiselike: 'https://wiselike.tw/#/user/chun'
